--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "jspdf": "^2.5.1",
     "mongoose": "^8.5.2",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
